<resources>
    <string name="app_name">Ak</string>
    <string name="app_zhu">主页</string>
    <string name="app_gan">干货</string>
    <string name="app_ying">影视</string>
    <string name="app_shu">书籍</string>
    <string name="app_ge">个人</string>
    <string name="hello">Hello World, XListViewActivity!</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
</resources>
