<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/drawer_layout"
    android:layout_gravity="start"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:id="@+id/frame_layout"
           />
        <RadioGroup
            android:layout_weight="0.3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:id="@+id/radio_group"
            android:layout_alignParentBottom="true"
            >
            <RadioButton
                android:drawableTop="@drawable/am_four"
                android:background="@drawable/select"
                android:id="@+id/Ra1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/app_zhu" />

            <RadioButton
                android:checked="true"
                android:background="@drawable/select"
                android:drawableTop="@drawable/ma_buone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/Ra2"
                android:layout_weight="1"
                android:text="@string/app_gan"
                android:button="@null"/>
            <RadioButton
                android:drawableTop="@drawable/ma_butwo"
                android:background="@drawable/select"
                android:id="@+id/Ra3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/app_ying" />
            <RadioButton
                android:drawableTop="@drawable/am_three"
                android:background="@drawable/select"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/Ra4"
                android:layout_weight="1"
                android:text="@string/app_shu"
                android:button="@null"/>
            <RadioButton
                android:drawableTop="@drawable/am_five"
                android:background="@drawable/select"
                android:id="@+id/Ra5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/app_ge" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:id="@+id/lauout02"
        android:orientation="vertical"
        android:layout_gravity="start|left"
        android:background="@color/app_b"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            android:id="@+id/left_imag"/>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>